# programming-bresla

./: CMakeLists.txt  README.md
lab01/doc/: lab01.txt
lab02/: Makefile
lab02/doc/: lab02.txt  log.txt
lab02/src/: lib.c  lib.h
lab02/test/: test.c.dump
lab03/: Makefile  README.md
lab03/doc/: lab03.txt
lab03/src/: main.c
lab04/: README.md
lab04/doc/: lab04.txt
lab04/src/: main.c
lab05/: README.md
lab05/doc/: lab05.txt
lab05/src/: main.c  main_for_lab07.c
lab06/: README.md
lab06/doc/: lab06.txt
lab06/src/: main.c  main_for_lab07.c
lab07/: README.md
lab07/src/: .~lock.main.c#  lab07.txt  main.c
lab08/: .~lock.Makefile#  Doxyfile
lab08/doc/: .~lock.lab08.md#  lab08.docx  lab08.md
lab08/src/: main.c
lab09/: CMakeLists.txt  Doxyfile  README.md
lab09/src/: lib.c  lib.h  main.c
lab09/test/: test.c
lab10/: CMakeLists.txt
lab10/doc/: lab10.md
lab10/src/: lib.c  lib.h  main.c
lab10/test/: test.c
lab11/: CMakeLists.txt  README.md
lab11/assets/: input.txt
lab11/doc/: lab11.md
lab11/src/: lib.c  lib.h  main.c
lab11/test/: test.c
lab12/: CMakeLists.txt
lab12/assets/: input.txt
lab12/doc/: lab10.md
lab12/src/: lib.c  lib.h  main.c
lab12/test/: test.c
lab13/: CMakeLists.txt  Doxyfile  Makefile  README.md
lab13/assets/: input.txt
lab13/doc/: lab13.md
lab13/src/: lib.c  lib.h  main.c
lab13/test/: test.c
lab14/: CMakeLists.txt  Doxyfile  README.md
lab14/assets/: input.txt
lab14/doc/: lab14.md
lab14/src/: lib.c  main.c
lab14/test/: test.c
lab15/: CMakeLists.txt  README.md
lab15/assets/: input.txt
lab15/doc/: lab14.md  lab15.md
lab15/src/: entity.c  entity.h  list.h  main.c
lab15/test/: test.c  university_list.h
