cmake_minimum_required(VERSION 3.22)
project(programming_bresla)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(programming_bresla
#        lab01/doc/lab01.txt
#        lab02/doc/lab02.txt
#        lab02/src/lib.c
#        lab02/src/lib.h
#        lab02/src/main.c
#        lab02/test/test.c
#        lab02/test/test.c.dump
#        lab02/Doxyfile
#        lab02/Makefile
#        lab02/README.md
#        lab03/doc/lab03.txt
#        lab03/src/main.c
#        lab03/Makefile
#        lab03/README.md
#        lab04/doc/lab04.txt
#        lab04/src/main.c
#        lab04/Makefile
#        lab04/README.md
#        lab05/doc/lab05.txt
#        lab05/src/main.c
#        lab05/Makefile
#        lab05/README.md
#        lab06/doc/lab06.txt
#        lab06/src/main.c
#        lab06/Makefile
#        lab06/README.md
#        lab07/doc/lab07.txt
#        lab07/src/main.c
#        lab07/Makefile
#        lab07/README.md
        lab08/doc/lab08.docx
        lab08/doc/lab08.md
        lab08/doc/lab08.pdf
        lab08/src/main.c
        lab08/Doxyfile
        lab08/Makefile
        lab08/README.md
        README.md)
